gateway/jwt-auth.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: jwt-auth
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  jwtRules:
  - issuer: "tank"
    jwks: |
      {
        "keys": [
          {
            "kty": "RSA",
            "alg": "RS256",
            "use": "sig",
            "e": "AQAB",
            "n": "vSe4T1ZARejHOYlwCrQKoQBqckox8IM02MOiqjBsJLTzBYv97h3eGL9lHmQ2BoHaYCreDnoBhOMr_gKl8ptwUFO8BU21dossZz8_cNJfCRwEKJkywTeJ7n8B2Ogr3F5ArMlesio96sKgX74oAGxZHihKwUw50wS7vXfvN8zuF4caBmGRxEMYleMB9ub7jVgN2s6aWLjdYz0pKVfW7uI0oprp272KlkkYgMhq_Ek95inVOxgrYUiaumFKbJh1Gqv39YV1CQEaz0krR-jP-Q5xIo3eqAim32q30LpbrDwmZ4pBqbJS6LKkV58KjzjR5a9YIdpAhic1_tFO2B-R9zA_rQ",
            "kid": "70c3c2a8a4f9ea9d"
          }
        ]
      }
    forwardOriginalToken: true
    fromHeaders:
    - name: Authorization
      prefix: "Bearer "
