gateway/route.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: istio-route
  namespace: istio-system
  generation: 2
spec:
  hosts: ["*"]
  gateways:
  - my-gateway
  http:
  - match:
    - uri:
        prefix: /ws/  # 根据实际WebSocket路径调整前缀
    route:
    - destination:
        host: gate-server.tank.svc.cluster.local  # 替换为实际WebSocket服务的Service名称
        port:
          number: 12001  # 替换为WebSocket服务的端口号
  - match:
    - uri:
        prefix: /api/1.0/public/user_server/
    route:
    - destination:
        host: user-server.tank.svc.cluster.local
        port:
          number: 8080
  - match:
    - uri:
        prefix: /api/1.0/get/user_server/
    route:
    - destination:
        host: user-server.tank.svc.cluster.local
        port:
          number: 8080
  - match:
    - uri:
        prefix: /observability/jaeger/
    route:
    - destination:
        host: jaeger.observability.svc.cluster.local
        port:
          number: 16686
  - match:
    - uri:
        prefix: /api/1.0/public/match_server/
    route:
    - destination:
        host: match-server.tank.svc.cluster.local
        port:
          number: 8080
  - match:
    - uri:
        prefix: /api/1.0/public/server_mgr/
    route:
    - destination:
        host: server-mgr.tank.svc.cluster.local
        port:
          number: 8080
  - match:
    - uri:
        prefix: /api/1.0/public/route/
    route:
    - destination:
        host: route-server.tank.svc.cluster.local
        port:
          number: 8080
  - match:
    - uri:
        prefix: /api/1.0/public/auction/
    route:
    - destination:
        host: auction-server.tank.svc.cluster.local
        port:
          number: 8080
  - match:
    - uri:
        prefix: /api/1.0/public/item_manager/
    route:
    - destination:
        host: item-manager.tank.svc.cluster.local
        port:
          number: 8080
  - match:
    - uri:
        prefix: /api/1.0/public/homepage_server/
    route:
    - destination:
        host: homepage-server.tank.svc.cluster.local
        port:
          number: 8080
  - match:
    - uri:
        prefix: /api/1.0/public/ranking/
    route:
    - destination:
        host: ranking-server.tank.svc.cluster.local
        port:
          number: 8080
  - route:
    - destination:
        host: user-server.tank.svc.cluster.local
        port:
          number: 8080
