gateway/jwt-authz.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: require-jwt
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: ALLOW
  rules:
  - to:
    - operation:
        paths:
        - /api/1.0/public/route/*
        - /api/1.0/public/auction/Sell*
    when:
    - key: request.auth.claims[iss]
      values: ["tank"]
  - to:
    - operation:
        notPaths:
        - /api/1.0/public/route/*
        - /api/1.0/public/auction/Sell*
